# Jurupari

./: CMakeLists.txt  README.md
include/: CMakeCache.txt  config.hpp  frequencia_combinacoes.hpp  main.hpp  mutator.hpp  paralelo.hpp  transformations.hpp  utils.hpp
src/: config.cpp  frequencia_combinacoes.cpp  main.cpp  mutator.cpp  paralelo.cpp  transformations.cpp  utils.cpp
